[package]
name = "chobi"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["now"] }
clap = { version = "4.5.42", features = ["derive"] }
env_logger = "0.11.8"
libc = "0.2.175"
log = "0.4.27"
regex-lite = "0.1.8"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
