[package]
name = "chobi"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "OpenZFS snapshot tool"
repository = "https://github.com/ifazk/chobi"
keywords = ["zfs", "snapshot"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
chrono = { version = "0.4.42", features = ["now"] }
clap = { version = "4.5.42", features = ["derive"] }
env_logger = "0.11.8"
libc = "0.2.175"
log = "0.4.27"
rand = { version = "0.9.2", features = ["small_rng"] }
regex-lite = "0.1.8"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
